Fix video poster paths in index.html
Updated video poster paths to use relative URLs.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <h2>MOST VIEWED SOUTH INDIAN MOVIE  <del>TRAILERS</del>   </h2>
     <h3><ins>Salaar: Part 1 – Ceasefire</ins> - most viewed South Indian movie trailers, built on a massive ₹270+ crore budget, setting new benchmarks in action cinema. 🎬🔥 </h3>
      <img src="./image1.jpg" height="315px" width="250px">
-     <video src="/data/video1.mp4" controls height="360px" width="500px" poster="/data/thumbnail1.avif"></video>
+     <video src="/data/video1.mp4" controls height="360px" width="500px" poster="./thumbnail1.avif"></video>
      <p>Salaar: Part 1 – Ceasefire is a high-octane action drama directed by Prashanth Neel, starring Prabhas in a powerful and intense role. Set in a dark, violent world of power struggles and loyalty, the film showcases a gripping narrative driven by raw emotions, friendship, and betrayal. With its striking visuals, thunderous background score by Ravi Basrur, and stylized action sequences, Salaar creates a cinematic experience that reflects Prashanth Neel’s signature storytelling style on a grand scale.
 
 Made on a massive budget of ₹270+ crore, Salaar stands as one of the most ambitious productions in South Indian cinema. The film’s trailer became one of the most viewed South Indian movie trailers, creating huge anticipation across India and globally. Its pan-Indian appeal, grand production values, and intense performances positioned Salaar as a major cinematic event, setting new benchmarks for action films and reinforcing Prabhas’s status as a pan-Indian star.</p>
  
     <h3><ins>KGF: Chapter 2 </ins> A Trailer That Created History | Massive Views & ₹100+ Crore Budget</h3>
     <img src="./image2.jpg" height="340px" width="250px" alt="">
-    <video src="/data/video2.mp4" controls height="360px" width="500px" poster="/data/thumbnail2.jpg"></video>
+    <video src="/data/video2.mp4" controls height="360px" width="500px" poster="./thumbnail2.jpg"></video>
     <p>KGF: Chapter 2 is a powerful action drama directed by Prashanth Neel, starring Yash as the iconic Rocky Bhai. The film continues the intense journey of Rocky as he rises to supreme power while facing enemies from both the underworld and political forces. Known for its larger-than-life storytelling, gritty visuals, and electrifying background score by Ravi Basrur, KGF Chapter 2 delivers high-voltage action and emotional depth, making it one of the most impactful films in Indian cinema.
 
 Made on an estimated budget of ₹100–150 crore, KGF: Chapter 2 emerged as a historic box-office phenomenon. The film went on to collect over ₹1,200+ crore worldwide, becoming one of the highest-grossing Indian films of all time. Its record-breaking trailer views, massive theatrical response, and pan-Indian appeal cemented its status as a cultural blockbuster, setting new benchmarks for success in South Indian and Indian cinema as a whole.</p>
@@ -32,7 +32,7 @@ Made on an estimated budget of ₹100–150 crore, KGF: Chapter 2 emerged as a h
         <ins>Pushpa 2: The Rule</ins>
 One of the most viewed Indian movie trailers, powered by a massive ₹400+ crore budget, setting new records even before release. 🔥🎬</h3>
 <img src="./image3.jpg" height="315px" width="250px" alt="">
-<video src="/data/video3.mp4" controls height="360px" width="500px" poster="/data/thumbnail3.jpg"></video>
+<video src="/data/video3.mp4" controls height="360px" width="500px" poster="./thumbnail3.jpg"></video>
 <p>Pushpa 2: The Rule is the much-anticipated sequel to Pushpa: The Rise, directed by Sukumar and starring Allu Arjun in his iconic role as Pushpa Raj. The film continues Pushpa’s journey as his power and influence grow, bringing him into intense conflict with enemies, authority, and the system itself. Known for its raw storytelling, rustic backdrop, powerful dialogues, and intense performances, Pushpa 2 promises to take the narrative to a much larger and more dramatic scale than its predecessor.
 
 With grand production values, a strong supporting cast, and music by Devi Sri Prasad, Pushpa 2: The Rule has generated massive buzz across India and internationally. The trailer emerged as one of the most viewed Indian movie trailers, reflecting the film’s enormous hype and pan-Indian appeal. Packed with action, emotion, and attitude, Pushpa 2 aims to set new benchmarks in commercial cinema while further cementing Allu Arjun’s status as a nationwide superstar.</p>
